<resources>
    <string name="app_name">DriveSafe</string>
    <string name="ss_desc">Because, It pays off</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="date_and_time">17 June 2021,23:23pm</string>
    <string name="home">Home</string>
    <string name="barcelona">Barcelona</string>
    <string name="total_distance">110 Km</string>
    <string name="time_traveled">1 h 32 m</string>
    <string name="speed">140 Km/h</string>
    <string name="alerts">Total Alerts: 12</string>
    <string name="clock_imageview">Clock ImageView</string>
    <string name="source_imageview">source ImageView</string>
    <string name="destination_imageview">destination ImageView</string>
    <string name="dummy_map">Dummy Map</string>
    <string name="alert_imageview">Alert ImageView</string>
    <string name="close_navigation_menu">close NavigationMenu</string>
    <string name="version">version:1.0.0</string>
    <string name="time">10:00</string>
    <string name="performance_text">7.5% poor performance than last trip</string>
    <string name="alert_indicator_imageview">alert indicator imageview</string>
    <string name="performance_image_view">performance image view</string>
    <string name="welcome">Welcome, Gavi</string>
    <string name="check_performance">Check your overall trip performance  </string>
    <string name="dashboard">DASHBOARD</string>
    <string name="nav_menu_close">nav menu close</string>
    <string name="profile_image">profile image</string>
    <string name="gavi">Gavi</string>
    <string name="gavi_gmail_com">Gavi@gmail.com</string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="help_and_support">Help and Support</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="driver_profiles">Driver Profiles</string>
    <string name="total_trip">Total trips: 2</string>
    <string name="next_button">next button</string>
    <string name="daily_report">Daily Report</string>
    <string name="date">17 june 2021</string>
    <string name="alert_number">12</string>
    <string name="alert">Alerts</string>
    <string name="_50">50%</string>
    <string name="bargraph">bargraph</string>
    <string name="_12">: 12</string>
    <string name="total_trips">Total Trips</string>
    <string name="_140_km">: 140 Km</string>
    <string name="_110_km">: 110 Km</string>
    <string name="total_distance_driven">Total Distance Driven</string>
    <string name="highest_speed_of_all_day">Highest Speed of all day</string>
    <string name="daily_report_icon">daily report icon</string>
    <string name="driver_profile">Driver profile</string>
</resources>