<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"  >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:enabled="true"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/about"
            android:enabled="true"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about" />

        <item
            android:id="@+id/notification"
            android:enabled="true"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/notification" />

        <item
            android:id="@+id/settings"
            android:enabled="true"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings" />

        <item
            android:id="@+id/help_and_support"
            android:enabled="true"
            android:icon="@drawable/baseline_supervised_user_circle_24"
            android:title="@string/help_and_support" />

        <item
            android:id="@+id/logout"
            android:enabled="true"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout" />
    </group>


</menu>