<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/profile_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gavi"
            app:layout_constraintStart_toEndOf="@id/profile_iv"
            app:layout_constraintTop_toTopOf="@id/profile_iv" />

        <TextView
            android:id="@+id/email_tv"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gavi_gmail_com"
            app:layout_constraintStart_toEndOf="@id/profile_iv"
            app:layout_constraintTop_toBottomOf="@id/username_tv" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/total_trip_tv"
            android:layout_height="wrap_content"
            android:text="@string/total_trip"
            app:layout_constraintEnd_toEndOf="@id/profile_iv"
            app:layout_constraintStart_toStartOf="@id/profile_iv"
            app:layout_constraintTop_toBottomOf="@id/profile_iv" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton

            android:id="@+id/next_btn"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:background="@color/black"
            android:contentDescription="@string/next_button"
            android:src="@drawable/baseline_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>