<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.TripDetailFragment"
    android:layout_height="match_parent">





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"

            style="@style/fragment_theme"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.Toolbar
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:id="@+id/trip_detail_toolbar"
                android:background="@color/black"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/back_iv"
                    android:layout_width="48dp"
                    app:tint="@color/white"
                    android:layout_height="48dp"
                    android:src="@drawable/baseline_arrow_back_24"/>


            </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".08" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".92" />

            <ImageView
                android:id="@+id/iv_clock"
                android:layout_width="16dp"
                android:layout_marginTop="24dp"
                android:layout_height="16dp"
                android:src="@drawable/baseline_access_time_filled_24"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
               app:layout_constraintTop_toBottomOf="@id/trip_detail_toolbar"
                android:contentDescription="@string/clock_imageview" />

            <TextView
                android:id="@+id/tv_date_and_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_and_time"
                app:layout_constraintBottom_toBottomOf="@id/iv_clock"
                app:layout_constraintStart_toEndOf="@id/iv_clock"
                app:layout_constraintTop_toTopOf="@id/iv_clock" />

            <ImageView
                android:id="@+id/iv_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/baseline_adjust_24"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/iv_clock"
                android:contentDescription="@string/source_imageview" />

            <ImageView
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/iv_source"
                app:layout_constraintBottom_toTopOf="@id/iv_destination"
                android:src="@drawable/baseline_more_vert_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                app:layout_constraintBottom_toBottomOf="@id/iv_source"
                app:layout_constraintStart_toEndOf="@id/iv_source"
                app:layout_constraintTop_toTopOf="@id/iv_source" />

            <ImageView
                android:id="@+id/iv_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/baseline_location_on_24"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/iv_source"
                android:contentDescription="@string/destination_imageview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barcelona"
                app:layout_constraintBottom_toBottomOf="@id/iv_destination"
                app:layout_constraintStart_toEndOf="@id/iv_destination"
                app:layout_constraintTop_toTopOf="@id/iv_destination" />

            <ImageView
                android:contentDescription="@string/dummy_map"
                android:id="@+id/iv_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/map"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/iv_destination" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/distance_constraint"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/iv_map">

                <TextView
                    android:id="@+id/total_distance_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_distance"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/divider1"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_traveled"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/divider2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/divider1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/highest_speed_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/divider2"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="1dp"
                    android:layout_height="68dp"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/time_tv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/total_distance_tv"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="1dp"
                    android:layout_height="68dp"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/highest_speed_tv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/time_tv"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/iv_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_notifications_24"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/distance_constraint"
                android:contentDescription="@string/alert_imageview" />

            <TextView
                android:id="@+id/tv_total_alerts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/alerts"
                app:layout_constraintBottom_toBottomOf="@id/iv_alert"
                app:layout_constraintStart_toEndOf="@id/iv_alert"
                app:layout_constraintTop_toTopOf="@id/iv_alert" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="0dp"
                android:layout_marginTop="24dp"
                android:layout_height="wrap_content"
                android:progress="20"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintTop_toBottomOf="@id/iv_alert"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</FrameLayout>