<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.ReportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/chart_icon_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_insert_chart_outlined_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/fragment_title_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/daily_report"
            app:layout_constraintBottom_toBottomOf="@id/chart_icon_imageview"
            app:layout_constraintStart_toEndOf="@id/chart_icon_imageview"
            app:layout_constraintTop_toTopOf="@id/chart_icon_imageview" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            app:cornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@id/chart_icon_imageview" />

        <TextView
            android:textSize="24sp"
            android:id="@+id/number_alert_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_btn" />

        <TextView
            android:textSize="24sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/number_alert_tv"
            android:id="@+id/alert_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert"
            app:layout_constraintBottom_toBottomOf="@id/number_alert_tv"
            app:layout_constraintTop_toTopOf="@id/number_alert_tv" />

        <ImageView
            android:id="@+id/bargraph_iv"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:src="@mipmap/bargraph"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alert_tv" />

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="0dp"
           app:layout_constraintTop_toBottomOf="@id/bargraph_iv"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:id="@+id/indicators_constraint_layout"
           android:layout_height="wrap_content">

           <androidx.constraintlayout.widget.Guideline
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:id="@+id/guideline_mid"
               app:layout_constraintGuide_percent=".5"/>


       </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>